; ModuleID = '/home/carl/AnghaBench/git/extr_http-walker.c_process_object_response.c'
source_filename = "/home/carl/AnghaBench/git/extr_http-walker.c_process_object_response.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object_request = type { %struct.TYPE_6__*, %struct.TYPE_5__*, i32, %struct.walker* }
%struct.TYPE_6__ = type { i32, i32, i32 }
%struct.TYPE_5__ = type { %struct.TYPE_5__* }
%struct.walker = type { %struct.walker_data* }
%struct.walker_data = type { %struct.alt_base* }
%struct.alt_base = type { i32 }

@COMPLETE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @process_object_response to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @process_object_response(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.object_request*, align 8
  %4 = alloca %struct.walker*, align 8
  %5 = alloca %struct.walker_data*, align 8
  %6 = alloca %struct.alt_base*, align 8
  store i8* %0, i8** %2, align 8
  %7 = load i8*, i8** %2, align 8
  %8 = bitcast i8* %7 to %struct.object_request*
  store %struct.object_request* %8, %struct.object_request** %3, align 8
  %9 = load %struct.object_request*, %struct.object_request** %3, align 8
  %10 = getelementptr inbounds %struct.object_request, %struct.object_request* %9, i32 0, i32 3
  %11 = load %struct.walker*, %struct.walker** %10, align 8
  store %struct.walker* %11, %struct.walker** %4, align 8
  %12 = load %struct.walker*, %struct.walker** %4, align 8
  %13 = getelementptr inbounds %struct.walker, %struct.walker* %12, i32 0, i32 0
  %14 = load %struct.walker_data*, %struct.walker_data** %13, align 8
  store %struct.walker_data* %14, %struct.walker_data** %5, align 8
  %15 = load %struct.walker_data*, %struct.walker_data** %5, align 8
  %16 = getelementptr inbounds %struct.walker_data, %struct.walker_data* %15, i32 0, i32 0
  %17 = load %struct.alt_base*, %struct.alt_base** %16, align 8
  store %struct.alt_base* %17, %struct.alt_base** %6, align 8
  %18 = load %struct.object_request*, %struct.object_request** %3, align 8
  %19 = getelementptr inbounds %struct.object_request, %struct.object_request* %18, i32 0, i32 0
  %20 = load %struct.TYPE_6__*, %struct.TYPE_6__** %19, align 8
  %21 = call i32 @process_http_object_request(%struct.TYPE_6__* %20)
  %22 = load i32, i32* @COMPLETE, align 4
  %23 = load %struct.object_request*, %struct.object_request** %3, align 8
  %24 = getelementptr inbounds %struct.object_request, %struct.object_request* %23, i32 0, i32 2
  store i32 %22, i32* %24, align 8
  %25 = load %struct.object_request*, %struct.object_request** %3, align 8
  %26 = getelementptr inbounds %struct.object_request, %struct.object_request* %25, i32 0, i32 0
  %27 = load %struct.TYPE_6__*, %struct.TYPE_6__** %26, align 8
  %28 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %27, i32 0, i32 2
  %29 = load %struct.object_request*, %struct.object_request** %3, align 8
  %30 = getelementptr inbounds %struct.object_request, %struct.object_request* %29, i32 0, i32 0
  %31 = load %struct.TYPE_6__*, %struct.TYPE_6__** %30, align 8
  %32 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %31, i32 0, i32 1
  %33 = load i32, i32* %32, align 4
  %34 = load %struct.object_request*, %struct.object_request** %3, align 8
  %35 = getelementptr inbounds %struct.object_request, %struct.object_request* %34, i32 0, i32 0
  %36 = load %struct.TYPE_6__*, %struct.TYPE_6__** %35, align 8
  %37 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  %39 = call i32 @normalize_curl_result(i32* %28, i32 %33, i32 %38, i32 4)
  %40 = load %struct.object_request*, %struct.object_request** %3, align 8
  %41 = getelementptr inbounds %struct.object_request, %struct.object_request* %40, i32 0, i32 0
  %42 = load %struct.TYPE_6__*, %struct.TYPE_6__** %41, align 8
  %43 = call i64 @missing_target(%struct.TYPE_6__* %42)
  %44 = icmp ne i64 %43, 0
  br i1 %44, label %45, label %73

45:                                               ; preds = %1
  %46 = load %struct.walker*, %struct.walker** %4, align 8
  %47 = load %struct.alt_base*, %struct.alt_base** %6, align 8
  %48 = getelementptr inbounds %struct.alt_base, %struct.alt_base* %47, i32 0, i32 0
  %49 = load i32, i32* %48, align 4
  %50 = call i32 @fetch_alternates(%struct.walker* %46, i32 %49)
  %51 = load %struct.object_request*, %struct.object_request** %3, align 8
  %52 = getelementptr inbounds %struct.object_request, %struct.object_request* %51, i32 0, i32 1
  %53 = load %struct.TYPE_5__*, %struct.TYPE_5__** %52, align 8
  %54 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %53, i32 0, i32 0
  %55 = load %struct.TYPE_5__*, %struct.TYPE_5__** %54, align 8
  %56 = icmp ne %struct.TYPE_5__* %55, null
  br i1 %56, label %57, label %72

57:                                               ; preds = %45
  %58 = load %struct.object_request*, %struct.object_request** %3, align 8
  %59 = getelementptr inbounds %struct.object_request, %struct.object_request* %58, i32 0, i32 1
  %60 = load %struct.TYPE_5__*, %struct.TYPE_5__** %59, align 8
  %61 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %60, i32 0, i32 0
  %62 = load %struct.TYPE_5__*, %struct.TYPE_5__** %61, align 8
  %63 = load %struct.object_request*, %struct.object_request** %3, align 8
  %64 = getelementptr inbounds %struct.object_request, %struct.object_request* %63, i32 0, i32 1
  store %struct.TYPE_5__* %62, %struct.TYPE_5__** %64, align 8
  %65 = load %struct.object_request*, %struct.object_request** %3, align 8
  %66 = getelementptr inbounds %struct.object_request, %struct.object_request* %65, i32 0, i32 0
  %67 = load %struct.TYPE_6__*, %struct.TYPE_6__** %66, align 8
  %68 = call i32 @release_http_object_request(%struct.TYPE_6__* %67)
  %69 = load %struct.walker*, %struct.walker** %4, align 8
  %70 = load %struct.object_request*, %struct.object_request** %3, align 8
  %71 = call i32 @start_object_request(%struct.walker* %69, %struct.object_request* %70)
  br label %76

72:                                               ; preds = %45
  br label %73

73:                                               ; preds = %72, %1
  %74 = load %struct.object_request*, %struct.object_request** %3, align 8
  %75 = call i32 @finish_object_request(%struct.object_request* %74)
  br label %76

76:                                               ; preds = %73, %57
  ret void
}

declare dso_local i32 @process_http_object_request(%struct.TYPE_6__*) #1

declare dso_local i32 @normalize_curl_result(i32*, i32, i32, i32) #1

declare dso_local i64 @missing_target(%struct.TYPE_6__*) #1

declare dso_local i32 @fetch_alternates(%struct.walker*, i32) #1

declare dso_local i32 @release_http_object_request(%struct.TYPE_6__*) #1

declare dso_local i32 @start_object_request(%struct.walker*, %struct.object_request*) #1

declare dso_local i32 @finish_object_request(%struct.object_request*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
